ci: setup build workflow

--- a/PCL2-Log-Viewer/Properties/R.resx
+++ b/PCL2-Log-Viewer/Properties/R.resx
@@ -234,4 +234,7 @@
   <data name="SettingShowModules" xml:space="preserve">
     <value>Modules</value>
   </data>
+  <data name="AppCommit" xml:space="preserve">
+    <value>COMMIT_HASH</value>
+  </data>
 </root>
