--- a/PCL2-Log-Viewer/Properties/R.resx
+++ b/PCL2-Log-Viewer/Properties/R.resx
@@ -255,4 +255,7 @@
   <data name="ButtonScrollToBottom" xml:space="preserve">
     <value>Scroll to bottom</value>
   </data>
+  <data name="ToggleDefaultContent" xml:space="preserve">
+    <value>&lt;Default&gt;</value>
+  </data>
 </root>
